// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Salaires /> should add a salaire 1`] = `
<div>
  <legend
    class="sc-gdyeKB TWbCy sc-iapWAC NcfDq"
    data-testid="question-label"
  >
    <span
      class="sc-ibQAlb iRaavs"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-ibQAlb TTAtT"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-kRRyDe etfFoG"
  >
    <label
      class="sc-dxcDKg dEoLmn"
      for="5"
    >
      Montant :
    </label>
    <div
      class="sc-kqGoIF hMUbvs"
    >
      <div
        class="sc-dkmUuB bSfMaa"
      >
        <input
          class="sc-ejfMa-d kArqSZ"
          id="5"
          name="salaires[0].salaire"
          type="number"
          value=""
        />
        <div
          class="sc-iEXKAA ibBixi"
        >
          <span>
            €
          </span>
        </div>
      </div>
    </div>
    <button
      class="sc-kOPcWz kyVwqT sc-gvZAcH csharU"
      type="button"
    >
      Supprimer
      <svg
        aria-hidden="true"
        class="sc-lnPyaJ eEFUQo"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.752 16.5 7.258 8.591A.957.957 0 0 1 7 7.932c0-.247.093-.484.259-.659A.858.858 0 0 1 7.883 7a.86.86 0 0 1 .625.273L16 15.183l7.492-7.91A.859.859 0 0 1 24.117 7c.234 0 .459.098.624.273a.957.957 0 0 1 .259.659.957.957 0 0 1-.259.66L17.249 16.5l7.492 7.909a.958.958 0 0 1 .259.659.957.957 0 0 1-.259.659.859.859 0 0 1-.624.273.86.86 0 0 1-.625-.273L16 17.817l-7.492 7.91a.859.859 0 0 1-.625.273.859.859 0 0 1-.624-.273.957.957 0 0 1-.259-.659.96.96 0 0 1 .259-.66l7.492-7.908z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <button
    class="sc-kOPcWz kyVwqT sc-iXzfSG eflQP"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-eulNck gbsKZB"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
</div>
`;

exports[`<Salaires /> should delete a salaires 1`] = `
<div>
  <legend
    class="sc-gdyeKB TWbCy sc-iapWAC NcfDq"
    data-testid="question-label"
  >
    <span
      class="sc-ibQAlb iRaavs"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-ibQAlb TTAtT"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <button
    class="sc-kOPcWz kyVwqT sc-iXzfSG eflQP"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-eulNck gbsKZB"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
</div>
`;

exports[`<Salaires /> should render 1`] = `
<div>
  <legend
    class="sc-gdyeKB TWbCy sc-iapWAC NcfDq"
    data-testid="question-label"
  >
    <span
      class="sc-ibQAlb iRaavs"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-ibQAlb TTAtT"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-kRRyDe etfFoG"
  >
    <label
      class="sc-dxcDKg dEoLmn"
      for="1"
    >
      Montant :
    </label>
    <div
      class="sc-kqGoIF hMUbvs"
    >
      <div
        class="sc-dkmUuB bSfMaa"
      >
        <input
          class="sc-ejfMa-d kArqSZ"
          id="1"
          name="salaires[0].salaire"
          type="number"
          value="3000"
        />
        <div
          class="sc-iEXKAA ibBixi"
        >
          <span>
            €
          </span>
        </div>
      </div>
    </div>
    <button
      class="sc-kOPcWz kyVwqT sc-gvZAcH csharU"
      type="button"
    >
      Supprimer
      <svg
        aria-hidden="true"
        class="sc-lnPyaJ eEFUQo"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.752 16.5 7.258 8.591A.957.957 0 0 1 7 7.932c0-.247.093-.484.259-.659A.858.858 0 0 1 7.883 7a.86.86 0 0 1 .625.273L16 15.183l7.492-7.91A.859.859 0 0 1 24.117 7c.234 0 .459.098.624.273a.957.957 0 0 1 .259.659.957.957 0 0 1-.259.66L17.249 16.5l7.492 7.909a.958.958 0 0 1 .259.659.957.957 0 0 1-.259.659.859.859 0 0 1-.624.273.86.86 0 0 1-.625-.273L16 17.817l-7.492 7.91a.859.859 0 0 1-.625.273.859.859 0 0 1-.624-.273.957.957 0 0 1-.259-.659.96.96 0 0 1 .259-.66l7.492-7.908z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <button
    class="sc-kOPcWz kyVwqT sc-iXzfSG eflQP"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-eulNck gbsKZB"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
</div>
`;
